openshift/shelf-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: bookshelf
  name: shelf
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: bookshelf
    deploymentconfig: shelf
  template:
    metadata:
      labels:
        app: bookshelf
        deploymentconfig: shelf
    spec:
      containers:
      - env:
        - name: KAFKA_BOOTSTRAP_ENDPOINTS
          value: bookshelf-cluster-kafka-bootstrap:9093
        - name: KAFKA_KEYSTORE_LOCATION
          value: file://var/lib/kafka/keystore.jks
        - name: KAFKA_KEYSTORE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: keystore-password
              name: bookshelf-cluster-cluster-ca-keystore-password
        - name: GOOGLE_BOOKS_APPNAME
          valueFrom:
            secretKeyRef:
              key: GOOGLE_BOOKS_APPNAME
              name: google-books-credentials
        - name: GOOGLE_BOOKS_USERID
          valueFrom:
            secretKeyRef:
              key: GOOGLE_BOOKS_USERID
              name: google-books-credentials
        - name: GOOGLE_BOOKS_SHELFID
          valueFrom:
            secretKeyRef:
              key: GOOGLE_BOOKS_SHELFID
              name: google-books-credentials
        - name: GOOGLE_BOOKS_TOKEN
          valueFrom:
            secretKeyRef:
              key: GOOGLE_BOOKS_TOKEN
              name: google-books-credentials
        image: docker-registry.default.svc:5000/bookshelf-dev/shelf:latest
        imagePullPolicy: Always
        name: shelf
        ports:
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/kafka/
          name: keystore
          readOnly: true
      volumes:
      - name: keystore
        secret:
          secretName: bookshelf-cluster-cluster-ca-keystore
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - shelf
      from:
        kind: ImageStreamTag
        name: shelf:latest
        namespace: bookshelf-dev
    type: ImageChange
