openshift/shelf-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookshelf
  name: bookshelf 
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: shelf 
  sessionAffinity: None
  type: ClusterIP
