openshift/shelf-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bookshelf
  name: bookshelf
spec:
  host: bookshelf-dev.cloud.nikio.io
  path: /shelf/api/v1/
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: bookshelf
    weight: 100
  wildcardPolicy: None
